--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="search">
 
-        <label for="input-search"></label>
+        <label for="input-search">Digite o Github username que quer favoritar</label>
         <input type="text" id="input-search" placeholder= "Digite o Github username que quer favoritar">
 
         <button><svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,11 +31,20 @@
           <span>favoritar</span>
           </button>
       </div>
-      </header>
+    </header>
       
 
     <table>
+      <thead>
+        <tr>
+          <th>Usuário</th>
+          <th>Repositories</th>
+          <th>Followers</th>
+          <th>Ação</th>
+        </tr>
+      </thead>
 
+      <tbody></tbody>
     </table>
 
 
