--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="" type="module" defer></script>
+    <script src="jS/main.js" type="module" defer></script>
   </head>
 
   <body>
@@ -63,7 +63,7 @@
         </thead>
 
         <tbody>
-          <tr>
+          <!-- <tr>
             <td class="user">
               <img src="http://github.com/ericlys.png" alt="foto do github" />
               <a href="http://github.com/ericlys" target="_blank">
@@ -75,22 +75,7 @@
             <td class="repositories">32</td>
             <td class="followers">24</td>
             <td><button class="remove">Remover</button></td>
-          </tr>
-
-          <tr>
-            <td class="user">
-              <img src="http://github.com/Edna06.png" alt="foto do github" />
-              <a href="http://github.com/Edna06" target="_blank">
-                <p>Edna Maria</p>
-                <span>/Edna06</span>
-              </a>
-              
-            </td>
-
-            <td class="repositories">32</td>
-            <td class="followers">24</td>
-            <td><button class="remove">Remover</button></td>
-          </tr>
+          </tr> -->
         </tbody>
 
         <tbody></tbody>
